# unConstrainedOptimizedLib

./: .testOpt.cpp.swo  .testOpt.cpp.swp  CMakeLists.txt  README.md  optFrameWork.cpp  optmMethod.cpp  testExample.cpp  testOpt.cpp  visualOpt.py
include/: baseAlgorithm.h  unConOptimziaton.h  visual.h
src/: baseAlgorithm.cpp  unConOptimization.cpp  visual.cpp
